corrected navbar dropdown on mobile.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -63,7 +63,6 @@
   --ifm-footer-color: #e3e3e3;
   --ifm-navbar-link-color: #E3E3E3;
   --ifm-navbar-link-hover-color: #FDEB86;
-  --ifm-menu-link-sublist-icon-filter: invert(100%) sepia(94%) saturate(17%) hue-rotate(223deg) brightness(104%) contrast(98%);
   --ifm-font-family-base: 'Roboto', sans-serif;
   --ifm-font-family-monospace: 'Cutive Mono', 'Courier New', monospace;
   --ifm-code-font-size: 95%;
@@ -262,8 +261,12 @@ strong {
   letter-spacing: 0.2rem;
 }
 
-/* Header sizes for mobile */
+/* Sytling for mobile */
 @media screen and (max-width:990px) {
+  :root {
+    --ifm-menu-link-sublist-icon-filter: invert(100%) sepia(94%) saturate(17%) hue-rotate(223deg) brightness(104%) contrast(98%);
+  }
+  
   h1 {
     font-size: 1.902em;
   }
